fix header spacing

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -2,7 +2,7 @@
 
 header {
   background: #f5f5f5;
-  padding: 60px 0px;
+  padding: 30px 0px;
 }
 
 .container {
